# 3d_detection

./: .gitignore  README.md  requirements.txt
docker/: Dockerfile
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: BoundingBox3D.msg  Detection3D.msg  Detection3DArray.msg  ObjectHypothesis.msg  TrackingResult.msg  TrackingResultArray.msg
src/ultralytics_ros/: CMakeLists.txt  package.xml
src/ultralytics_ros/OC_SORT/tools/: mota.py
src/ultralytics_ros/include/tracker_with_cloud_node/: tracker_with_cloud_node.h
src/ultralytics_ros/launch/: tracker_with_cloud_ros1.launch  tracking.launch
src/ultralytics_ros/rviz/: default.rviz
src/ultralytics_ros/scripts/: dino_ocsort.py  overlay_test.py
src/ultralytics_ros/src/: tracker_with_cloud_node.cpp
